k8s-bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: racked-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: racked-bot
  template:
    metadata:
      labels:
        app: racked-bot
    spec:
      containers:
      - name: racked-bot
        image: ghcr.io/meepstertron/racked-bot:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: racked-bot
spec:
  type: ClusterIP
  selector:
    app: racked-bot
  ports:
  - port: 80
    targetPort: 8000
