k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: racked-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: racked-website
  template:
    metadata:
      labels:
        app: racked-website
    spec:
      containers:
      - name: racked-website
        image: ghcr.io/meepstertron/racked-website:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: racked-website
spec:
  type: ClusterIP
  selector:
    app: racked-website
  ports:
  - port: 80
    targetPort: 80
