k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: racked-website-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: racked.dino.icu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: racked-website
            port:
              number: 80
      - path: /websocket
        pathType: Prefix
        backend:
          service:
            name: racked-bot
            port:
              number: 80

  - host: racked.hexagonical.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: racked-website
            port:
              number: 80
